--- a/smile.html
+++ b/smile.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>プッシュ練習</title>
+    <title>編集中だよ</title>
 </head>
 <body>
     <p>test<p>
